# pyfirst

./: .gitignore  README.md  main.py  pyproject.toml  redis.demo.py
basics/: 49buildin-func.py  asyncio.demo.py  buildin.func.py  capcha.demo.py  defination.py  download_pic.py  example.py  f-str.demo.py  itertools.demo.py  moveX.py  moveX1.py  randoms.py  readconfig.py  singleton.py  socket.client.py  socket.server.py  thread.demo.py
config/: config.toml  config.yml
data/: demo.csv  douban_movietop250.xlsx  student_score.xlsx  student_score_processed.xlsx  weather_beijing_2024.xlsx
frmwks/: fastapi.demo.py  mysql.demo.py
mysqls/: pymysql.demo.py  sqlalchemydemo.py
numpys/: arrayconcat.py  arrayfilter.py  arrayrandom.py  arraysort.py  arraysplit.py
opencv/: camera.py  creditcardProject.py  ctrl_camera.py  ctrl_colortrans.py  ctrl_mouse.py  drawcricle.py  drawellipse.py  drawimg.py  drawline.py  drawpolylines.py  drawrectangle.py  drawtext.py  first.py  imgAngleFinder.py  imgAnswerSheetDetection.py  imgCarPlateDetection.py  imgFeatureDetection.py  imgMeanShift.py  imgObjectTracker.py  imgOpticalEstimation.py  imgQR.py  imgTemplateMatch.py  imgaffinetransform.py  imgcontour.py  imgfliter.py  imggrabcut.py  imghistogram.py  imgoperation.py  imgoperators.py  imgpyramid.py  imgrotateMatrix.py  imgshaping.py  imgsplit.py  imgtransform.py  imgwatershed.py  proj_OCR.py  proj_carcounter.py  proj_faceDetection.py  proj_grabcut.py  proj_virtualCalculator.py  (+2 more)
pandasdemo/: getdoubantop250.py  getweather.py  pandas_addcol.py  pandas_concat.py  pandas_excel_op.py  (+10 more)
(+27 files in other folders)
