[project]
name = "pyfirst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "captcha>=0.7.1",
    "cvzone>=1.6.1",
    "face-recognition>=1.3.0",
    "manim>=0.17.3",
    "matplotlib>=3.10.3",
    "mediapipe>=0.10.21",
    "mysql-connector-python>=9.3.0",
    "numpy==1.26.0",
    "opencv-contrib-python==4.9.0.80",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pycaw",
    "pytesseract>=0.3.13",
    "python-barcode>=0.15.1",
    "pyzbar>=0.1.9",
    "requests>=2.32.3",
    "setuptools>=80.9.0,<81",
    "sqlalchemy>=2.0.41",
]

[tool.uv.sources]
pycaw = { git = "https://github.com/AndreMiras/pycaw" }
